feat: basic CRUD Repository
