# docs/swagger.json
@@ -93,7 +93,30 @@
                 }
             }
         },
-        "/user/details/{id}": {
+        "/user/hello": {
+            "get": {
+                "description": "Anh trai say gex",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Anh trai say hi",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HttpResponse-string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/{id}": {
             "get": {
                 "security": [
                     {
@@ -131,29 +154,6 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/dto.HttpResponse-any"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/hello": {
-            "get": {
-                "description": "Anh trai say gex",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Anh trai say hi",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.HttpResponse-string"
                         }
                     }
                 }
@@ -262,15 +262,12 @@
                     "type": "integer"
                 },
                 "createdAt": {
-                    "description": "Auto-set on insert",
                     "type": "string"
                 },
                 "id": {
-                    "description": "Primary key",
                     "type": "string"
                 },
                 "isDeleted": {
-                    "description": "Soft delete flag",
                     "type": "boolean"
                 },
                 "name": {
@@ -280,11 +277,9 @@
                     "type": "boolean"
                 },
                 "updatedAt": {
-                    "description": "Auto-set on update",
                     "type": "string"
                 },
                 "version": {
-                    "description": "Optimistic lock",
                     "type": "integer"
                 }
             }
